# pyhexaly_sandbox

./: README.md  pyproject.toml
QuickStartGuide/: WriteHexalyModel.py
